fix css align

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,17 @@
 p {
   font-family: Lato;
 }
-
-.container {
+li {
+  list-style-type: none;
+}
+button {
+  margin: 0.5em;
 }
 .group-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2em;
 }
 
 .table-grid {
